[package]
name = "mining-pool-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["serde", "v4"]}